[Mac] Fix regression with incognito tab close button.

https://chromium-review.googlesource.com/769238 cleans up the TabView
initialization code but the reordering causes the TabView to never
receive a pointer to its closeButton. This cl ensures closeButton
creation occurs before TabView creation.

Bug: 786326, 786387
Change-Id: Id1fce1b8dcd1014ae015b7806df3541981d08253
Reviewed-on: https://chromium-review.googlesource.com/777394
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Jayson Adams <shrike@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517843}
Former-commit-id: 082bcd2a68fa714c5eba28aeed23ef17e0856208